syntax = "proto3";

package orders.v1;

option go_package = "github.com/mumumio1/coldy/proto/orders/v1;ordersv1";

import "google/protobuf/timestamp.proto";
import "proto/common/v1/common.proto";

service OrderService {
  rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse);
  rpc GetOrder(GetOrderRequest) returns (GetOrderResponse);
  rpc ListOrders(ListOrdersRequest) returns (ListOrdersResponse);
  rpc CancelOrder(CancelOrderRequest) returns (CancelOrderResponse);
  rpc UpdateOrderStatus(UpdateOrderStatusRequest) returns (UpdateOrderStatusResponse);
}

enum OrderStatus {
  ORDER_STATUS_UNSPECIFIED = 0;
  ORDER_STATUS_PENDING = 1;
  ORDER_STATUS_CONFIRMED = 2;
  ORDER_STATUS_PAID = 3;
  ORDER_STATUS_PROCESSING = 4;
  ORDER_STATUS_SHIPPED = 5;
  ORDER_STATUS_DELIVERED = 6;
  ORDER_STATUS_CANCELLED = 7;
  ORDER_STATUS_REFUNDED = 8;
}

message Order {
  string id = 1;
  string user_id = 2;
  repeated OrderItem items = 3;
  common.v1.Money total_amount = 4;
  OrderStatus status = 5;
  common.v1.Address shipping_address = 6;
  string payment_id = 7;
  google.protobuf.Timestamp created_at = 8;
  google.protobuf.Timestamp updated_at = 9;
}

message OrderItem {
  string product_id = 1;
  string product_name = 2;
  int32 quantity = 3;
  common.v1.Money unit_price = 4;
  common.v1.Money total_price = 5;
}

message CreateOrderRequest {
  common.v1.RequestMetadata metadata = 1;
  string idempotency_key = 2; // For idempotent POST
  string user_id = 3;
  repeated OrderItemRequest items = 4;
  common.v1.Address shipping_address = 5;
}

message OrderItemRequest {
  string product_id = 1;
  int32 quantity = 2;
}

message CreateOrderResponse {
  Order order = 1;
  bool from_cache = 2; // True if returned from idempotency cache
}

message GetOrderRequest {
  common.v1.RequestMetadata metadata = 1;
  string order_id = 2;
}

message GetOrderResponse {
  Order order = 1;
}

message ListOrdersRequest {
  common.v1.RequestMetadata metadata = 1;
  string user_id = 2;
  common.v1.PaginationRequest pagination = 3;
  OrderStatus status_filter = 4;
}

message ListOrdersResponse {
  repeated Order orders = 1;
  common.v1.PaginationResponse pagination = 2;
}

message CancelOrderRequest {
  common.v1.RequestMetadata metadata = 1;
  string order_id = 2;
  string reason = 3;
}

message CancelOrderResponse {
  Order order = 1;
}

message UpdateOrderStatusRequest {
  common.v1.RequestMetadata metadata = 1;
  string order_id = 2;
  OrderStatus status = 3;
}

message UpdateOrderStatusResponse {
  Order order = 1;
}

